[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.14",
    "jinja2>=3.1.6",
    "langchain>=0.3.26",
    "langchain-groq>=0.3.5",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "pydantic-settings>=2.10.1",
]
